--- a/backend/src/backend/Domain/Domain.csproj
+++ b/backend/src/backend/Domain/Domain.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
     <Folder Include="Enums\" />
+    <Folder Include="Persistence\" />
     <Folder Include="Value Objects\" />
   </ItemGroup>
 
