--- a/backend/src/backend/Infrastructure/Infrastructure.csproj
+++ b/backend/src/backend/Infrastructure/Infrastructure.csproj
@@ -14,6 +14,8 @@
   <ItemGroup>
     <Folder Include="Identity\" />
     <Folder Include="Authentication\" />
+    <Folder Include="Repositories\Admin\" />
+    <Folder Include="Repositories\Staff\" />
   </ItemGroup>
 
   <ItemGroup>
