Add-Migration AddAdminProfileAndUserVerified

--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=hatrung;Password=123;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=hatrung;Password=123;TrustServerCertificate=True;"
+    },
   "Jwt": {
     "Key": "supersecretkey123456789",
     "Issuer": "HolaBikeAPI",
