--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(local);Database=HolaBike;User Id=hatrung;Password=123;TrustServerCertificate=True;"
+    },
+  "Jwt": {
+    "Key": "supersecretkey123456789",
+    "Issuer": "HolaBikeAPI",
+    "Audience": "HolaBikeClient"
+  }
+
 }
