manage stations with base for api and middleware

--- a/backend/src/backend/APIUserLayer/APIUserLayer.csproj
+++ b/backend/src/backend/APIUserLayer/APIUserLayer.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\Base\" />
     <Folder Include="Controllers\User\" />
   </ItemGroup>
 
