--- a/backend/src/backend/Application/Application.csproj
+++ b/backend/src/backend/Application/Application.csproj
@@ -13,12 +13,9 @@
   <ItemGroup>
     <Folder Include="Interfaces\Admin\Service\" />
     <Folder Include="Interfaces\Admin\Repository\" />
-    <Folder Include="Interfaces\Staff\Repository\" />
-    <Folder Include="Interfaces\Staff\Service\" />
     <Folder Include="Interfaces\User\Repository\" />
     <Folder Include="Interfaces\User\Service\" />
     <Folder Include="Services\Admin\" />
-    <Folder Include="Services\Staff\" />
     <Folder Include="Services\User\" />
     <Folder Include="Validators\" />
   </ItemGroup>
@@ -26,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.9" />
   </ItemGroup>
 
 </Project>
