--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=hatrung;Password=123;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "supersecretkey123456789",
