update key for jwt

--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(local);Database=HolaBike;User Id=hatrung;Password=123;TrustServerCertificate=True;"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=hatrung;Password=123;TrustServerCertificate=True;"
+  },
   "Jwt": {
-    "Key": "supersecretkey123456789",
+    "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
     "Issuer": "HolaBikeAPI",
     "Audience": "HolaBikeClient"
   }
