--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   http: ^1.2.0
   flutter_map: ^6.0.0
   latlong2: ^0.9.0
+  flutter_glow: ^0.3.2
+  geolocator: ^10.1.0
+  permission_handler: ^11.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
