done feature register and login

--- a/backend/src/backend/Application/Application.csproj
+++ b/backend/src/backend/Application/Application.csproj
@@ -13,16 +13,15 @@
   <ItemGroup>
     <Folder Include="Interfaces\Admin\Service\" />
     <Folder Include="Interfaces\Admin\Repository\" />
-    <Folder Include="Interfaces\User\Repository\" />
-    <Folder Include="Interfaces\User\Service\" />
     <Folder Include="Services\Admin\" />
-    <Folder Include="Services\User\" />
     <Folder Include="Validators\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.9" />
   </ItemGroup>
 
