--- a/backend/src/backend/Infrastructure/Infrastructure.csproj
+++ b/backend/src/backend/Infrastructure/Infrastructure.csproj
@@ -13,8 +13,8 @@
 
   <ItemGroup>
     <Folder Include="Authentication\" />
+    <Folder Include="Identity\" />
     <Folder Include="Repositories\Admin\" />
-    <Folder Include="Repositories\User\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +33,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.9" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.9" />
   </ItemGroup>
