completed payment by VNPay

--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -1,18 +1,26 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    },
+    "Jwt": {
+        "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
+        "Issuer": "HolaBikeAPI",
+        "Audience": "HolaBikeClient"
+    },
+    "VnPaySettings": {
+        "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+        "ReturnUrl": "http://localhost:5219/api/Payments/vnpay-return",
+        "TmnCode": "KGL4TZZ3",
+        "HashSecret": "9GKL260D9F64YKSS7E9FPPVSDU1TA7FB",
+        "ApiVersion": "2.0.0"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=hatrung;Password=123;TrustServerCertificate=True;"
-  },
-  "Jwt": {
-    "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
-    "Issuer": "HolaBikeAPI",
-    "Audience": "HolaBikeClient"
-  }
+
 
 }
