--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_glow: ^0.3.2
   geolocator: ^10.1.0
   permission_handler: ^11.0.0
+  mobile_scanner: ^3.5.0
+  flutter_easyloading: ^3.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
