--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -1,26 +1,34 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
-    },
-    "Jwt": {
-        "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
-        "Issuer": "HolaBikeAPI",
-        "Audience": "HolaBikeClient"
-    },
-    "VnPaySettings": {
-        "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-        "ReturnUrl": "http://localhost:5219/api/Payments/vnpay-return",
-        "TmnCode": "KGL4TZZ3",
-        "HashSecret": "9GKL260D9F64YKSS7E9FPPVSDU1TA7FB",
-        "ApiVersion": "2.0.0"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
-
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
+    "Issuer": "HolaBikeAPI",
+    "Audience": "HolaBikeClient"
+  },
+  "VnPaySettings": {
+    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "http://localhost:5219/api/Payments/vnpay-return",
+    "TmnCode": "KGL4TZZ3",
+    "HashSecret": "9GKL260D9F64YKSS7E9FPPVSDU1TA7FB",
+    "ApiVersion": "2.0.0"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dt7e4s6mr",
+    "ApiKey": "737651163243514",
+    "ApiSecret": "Xg2W0iytEU_2OMm_B8VSopWVyZs"
+  },
+  "OcrSpaceSettings": {
+    "ApiKey": "K85841327188957",
+    "DefaultLanguage": "vie"
+  }
 
 }
