--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -1,17 +1,22 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
-    },
-    "Jwt": {
-        "Key": "supersecretkey123456789",
-        "Issuer": "HolaBikeAPI",
-        "Audience": "HolaBikeClient"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "supersecretkey123456789",
+    "Issuer": "HolaBikeAPI",
+    "Audience": "HolaBikeClient"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dt7e4s6mr",
+    "ApiKey": "737651163243514",
+    "ApiSecret": "Xg2W0iytEU_2OMm_B8VSopWVyZs"
+  }
 }
