--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -10,7 +10,7 @@
         "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
     },
     "Jwt": {
-        "Key": "supersecretkey123456789",
+        "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
         "Issuer": "HolaBikeAPI",
         "Audience": "HolaBikeClient"
     }
