done feature create contact for guest

--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -1,26 +1,36 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
-    },
-    "Jwt": {
-        "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
-        "Issuer": "HolaBikeAPI",
-        "Audience": "HolaBikeClient"
-    },
-    "VnPaySettings": {
-        "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-        "ReturnUrl": "http://localhost:5173/payment/payment-return",
-        "TmnCode": "KGL4TZZ3",
-        "HashSecret": "9GKL260D9F64YKSS7E9FPPVSDU1TA7FB",
-        "ApiVersion": "2.0.0"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
+    "Issuer": "HolaBikeAPI",
+    "Audience": "HolaBikeClient"
+  },
+  "VnPaySettings": {
+    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "http://localhost:5173/payment/payment-return",
+    "TmnCode": "KGL4TZZ3",
+    "HashSecret": "9GKL260D9F64YKSS7E9FPPVSDU1TA7FB",
+    "ApiVersion": "2.0.0"
+  },
+  "MailSettings": {
+    "Host": "live.smtp.mailtrap.io",
+    "DefaultCredentials": false,
+    "Port": 587,
+    "Name": "Your sender name",
+    "EmailId": "Your email ID",
+    "UserName": "Your username",
+    "Password": "Your password",
+    "UseSSL": true
+  }
 
 
 }
