--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -1,17 +1,27 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
-    },
-    "Jwt": {
-        "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
-        "Issuer": "HolaBikeAPI",
-        "Audience": "HolaBikeClient"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
+    "Issuer": "HolaBikeAPI",
+    "Audience": "HolaBikeClient"
+  },
+  "MailSettings": {
+    "Host": "live.smtp.mailtrap.io",
+    "DefaultCredentials": false,
+    "Port": 587,
+    "Name": "Your sender name",
+    "EmailId": "Your email ID",
+    "UserName": "Your username",
+    "Password": "Your password",
+    "UseSSL": true
+  }
 }
