add feature reply email for staff

--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -15,13 +15,13 @@
     "Audience": "HolaBikeClient"
   },
   "MailSettings": {
-    "Host": "live.smtp.mailtrap.io",
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 2525,
+    "UserName": "43fb44a9f8bb01",
+    "Password": "2478949b75cc1f",
+    "EmailId": "from@example.com",
+    "Name": "Mailtrap Test Sender",
     "DefaultCredentials": false,
-    "Port": 587,
-    "Name": "Your sender name",
-    "EmailId": "Your email ID",
-    "UserName": "Your username",
-    "Password": "Your password",
     "UseSSL": true
   }
 }
