done feature reply email contact

--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -22,6 +22,6 @@
     "EmailId": "from@example.com",
     "Name": "Mailtrap Test Sender",
     "DefaultCredentials": false,
-    "UseSSL": true
+    "UseSSL": false
   }
 }
