--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -29,7 +29,6 @@
     "EmailId": "from@example.com",
     "Name": "Mailtrap Test Sender",
     "DefaultCredentials": false,
-    "UseSSL": true
+    "UseSSL": false
   }
-
 }
