--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/google.maps": "^3.58.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.1.9",
     "@types/react-slick": "^0.23.13",
