--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   mobile_scanner: ^3.5.0
   flutter_easyloading: ^3.0.5
   device_info_plus: ^12.2.0
-  flutter_secure_storage: ^9.0.0 
+  flutter_secure_storage: ^9.0.0
+  provider: ^6.0.5 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
