Reapply changes for ESBEBSS-20 after history fix

--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -30,5 +30,10 @@
     "Name": "Mailtrap Test Sender",
     "DefaultCredentials": false,
     "UseSSL": false
+  },
+  "CloudinarySettings": {
+    "CloudName": "dt7e4s6mr",
+    "ApiKey": "737651163243514",
+    "ApiSecret": "Xg2W0iytEU_2OMm_B8VSopWVyZs"
   }
 }
