--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   device_info_plus: ^12.2.0
   flutter_secure_storage: ^9.0.0
   provider: ^6.0.5 
-
+  webview_flutter: ^4.7.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
