--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   provider: ^6.0.5 
   webview_flutter: ^4.7.0
+  image_picker: ^1.0.4
+  google_mlkit_text_recognition: ^0.13.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -72,6 +74,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
