--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
   },
-  "Jwt": {
-    "Key": "supersecretkey123456789",
-    "Issuer": "HolaBikeAPI",
-    "Audience": "HolaBikeClient"
-  },
+    "Jwt": {
+        "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
+        "Issuer": "HolaBikeAPI",
+        "Audience": "HolaBikeClient"
+    },
   "CloudinarySettings": {
     "CloudName": "dt7e4s6mr",
     "ApiKey": "737651163243514",
