done config email in real environment

--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -7,26 +7,26 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
   },
-    "Jwt": {
-        "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
-        "Issuer": "HolaBikeAPI",
-        "Audience": "HolaBikeClient"
-    },
+  "Jwt": {
+    "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
+    "Issuer": "HolaBikeAPI",
+    "Audience": "HolaBikeClient"
+  },
   "CloudinarySettings": {
     "CloudName": "dt7e4s6mr",
     "ApiKey": "737651163243514",
     "ApiSecret": "Xg2W0iytEU_2OMm_B8VSopWVyZs"
   },
   "MailSettings": {
-    "Host": "sandbox.smtp.mailtrap.io",
-    "Port": 2525,
-    "UserName": "43fb44a9f8bb01",
-    "Password": "2478949b75cc1f",
-    "EmailId": "from@example.com",
-    "Name": "Mailtrap Test Sender",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "UserName": "hatrung03022003@gmail.com",
+    "Password": "pdjc tosa isdu hwck",
+    "EmailId": "hatrung03022003@gmail.com",
+    "Name": "EcoJourney – Smart Bicycle & E-Bike Sharing System",
     "DefaultCredentials": false,
-    "UseSSL": false
+    "UseSSL": true
   }
 }
