--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^6.0.5 
   webview_flutter: ^4.7.0
   image_picker: ^1.0.4
+  fluttertoast: ^8.2.1
   google_mlkit_text_recognition: ^0.13.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
