Add redis to base generic service

--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;",
+    "Redis": "localhost:6379,abortConnect=false"
   },
   "Jwt": {
     "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
@@ -29,4 +30,5 @@
     "DefaultCredentials": false,
     "UseSSL": true
   }
+
 }
