Update rental create/end , add new history rental

--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
-  },
+    "ConnectionStrings": {
+       "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
+    },
   "Jwt": {
     "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
     "Issuer": "HolaBikeAPI",
@@ -22,14 +22,14 @@
     "ApiVersion": "2.0.0"
   },
   "MailSettings": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "UserName": "hatrung03022003@gmail.com",
-    "Password": "pdjc tosa isdu hwck",
-    "EmailId": "hatrung03022003@gmail.com",
-    "Name": "EcoJourney – Smart Bicycle & E-Bike Sharing System",
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 2525,
+    "UserName": "43fb44a9f8bb01",
+    "Password": "2478949b75cc1f",
+    "EmailId": "from@example.com",
+    "Name": "Mailtrap Test Sender",
     "DefaultCredentials": false,
-    "UseSSL": true
+    "UseSSL": false
   },
   "CloudinarySettings": {
     "CloudName": "dt7e4s6mr",
