Add user lifetime statistics
Thống kê được tổng quãng đường , thời gian đi , calories tiêu hao theo lịch sử thuê xe

--- a/backend/src/backend/AdminLayer/appsettings.json
+++ b/backend/src/backend/AdminLayer/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;",
     "Redis": "localhost:6379,abortConnect=false"
   },
   "Jwt": {
