add feature voucher

--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-       "DefaultConnection": "Server=PHAMNGOCHA;Database=HolaBike;User Id=sa;Password=123456;TrustServerCertificate=True;"
+       "DefaultConnection": "Server=(local);Database=HolaBike;User Id=sa;Password=123;TrustServerCertificate=True;"
     },
   "Jwt": {
     "Key": "ThisIsMySuperLongAndVerySecureSecretKeyForHolaBikeApp2025!",
