Update_Profile_and_Add_HistoryRental_Learderboard

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,12 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "dayjs": "^1.11.19",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^3.3.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
@@ -30,8 +33,9 @@
     "@eslint/js": "^9.36.0",
     "@tailwindcss/vite": "^4.1.13",
     "@types/google.maps": "^3.58.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.1.9",
+    "@types/leaflet": "^1.9.21",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.0.3",
