Completed manage rental

--- a/backend/src/backend/APIUserLayer/appsettings.json
+++ b/backend/src/backend/APIUserLayer/appsettings.json
@@ -14,13 +14,13 @@
     "Issuer": "HolaBikeAPI",
     "Audience": "HolaBikeClient"
   },
-  "VnPaySettings": {
-    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "http://localhost:5173/payment/payment-return",
-    "TmnCode": "KGL4TZZ3",
-    "HashSecret": "9GKL260D9F64YKSS7E9FPPVSDU1TA7FB",
-    "ApiVersion": "2.0.0"
-  },
+    "VnPaySettings": {
+        "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+        "ReturnUrl": "https://ecojourneyhola.vercel.app/payment/payment-return",
+        "TmnCode": "HOTCM22D",
+        "HashSecret": "39IQHMI0PEEDEW0ASPWNJBJGMQYBN2S2",
+        "ApiVersion": "2.0.0"
+    },
   "MailSettings": {
     "Host": "sandbox.smtp.mailtrap.io",
     "Port": 2525,
