--- a/backend/src/backend/APIUserLayer/Properties/launchSettings.json
+++ b/backend/src/backend/APIUserLayer/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7160;http://localhost:5220",
+      "applicationUrl": "https://localhost:7160",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
