--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "tailwind:init": "tailwindcss init -p"
+    "tailwind:init": "tailwindcss init -p",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
@@ -17,6 +19,7 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "dayjs": "^1.11.19",
+    "framer-motion": "^12.23.25",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^3.3.1",
     "react": "^19.2.0",
@@ -30,7 +33,13 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@eslint/js": "^9.36.0",
+    "@storybook/addon-a11y": "^10.1.4",
+    "@storybook/addon-docs": "^10.1.4",
+    "@storybook/addon-onboarding": "^10.1.4",
+    "@storybook/addon-vitest": "^10.1.4",
+    "@storybook/react-vite": "^10.1.4",
     "@tailwindcss/vite": "^4.1.13",
     "@types/google.maps": "^3.58.1",
     "@types/leaflet": "^1.9.21",
@@ -39,15 +48,20 @@
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^5.0.3",
+    "@vitest/browser-playwright": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.15",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-storybook": "^10.1.4",
     "globals": "^16.4.0",
+    "playwright": "^1.57.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.15",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^4.0.15"
   }
 }
