--- a/backend/src/backend/AdminLayer/Properties/launchSettings.json
+++ b/backend/src/backend/AdminLayer/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "dotnetRunMessages": true,
         "launchUrl": "swagger",
         "launchBrowser": false,
-        "applicationUrl": "https://localhost:7240;http://localhost:5220",
+        "applicationUrl": "https://localhost:7240",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
         }
