--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,9 @@
     "@tanstack/react-query": "^5.90.3",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.23.26",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^3.3.1",
     "react": "^19.2.0",
@@ -28,8 +29,10 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "react-slick": "^0.31.0",
+    "recharts": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.26.2",
+    "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -51,6 +54,7 @@
     "@vitest/browser-playwright": "^4.0.15",
     "@vitest/coverage-v8": "^4.0.15",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
